--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "clean-webpack-plugin": "^4.0.0",
     "lite-server": "^2.5.4",
     "ts-loader": "^9.3.0",
@@ -22,5 +23,9 @@
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
+  },
+  "dependencies": {
+    "class-validator": "^0.14.0",
+    "lodash": "^4.17.21"
   }
 }
